# power_plants

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
eda/: eda.ipynb
exceptions/: exceptions.py
models/: power_plant.py
services/: data_handler.py
tasks/: __init__.py  config.py  docker.py  linting.py
tests/: test_data_cleaner.py  test_data_handler.py  test_models.py
util/: data_cleaner.py
