[tool.poetry]
name = "power-plants"
version = "0.1.0"
description = "show a map to visualize the annual net generation of power plants of the US"
authors = ["okahwaji <26441022+omarkahwaji@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
uvicorn = "^0.23.2"
jupyter = "^1.0.0"
prometheus-fastapi-instrumentator = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
faker = "^19.2.0"
black = "^23.7.0"
invoke = "^2.2.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
